2.1.2
 - Added support for Block Until Redy
 - Removed php serialization at Redis cache to support Cache cross SDK spec
2.1.1
 - Added Events endpoint support in binary splitio.phar
 - Fixed Standard messages in binary splitio.phar
2.1.0
 - Added PRedis Adapter support
2.0.0
 - Added attributes support
1.0.1
 - The Segment evaluation has benn added into a shared memory block to improve the performance.
 - The Feature specification is stored in shared memory in order to improve the evaluation performance.
 - Metrics and impressions are dropped from cache after send it, despite of response status.
 - The service output will be send only in verbose mode (-v parameter).