@@ -3,5 +3,4 @@ namespace SplitIO\Exception;
 
 class TimeOutException extends \LogicException
 {
-
 }
